[tool.poetry]
name = "PMYning"
version = "0.1.1"
description = "A process mining tool"
authors = ["Willem Bressers <dhr.bressers@gmail.com>"]
readme = "docs/index.md"
license = "MIT"
homepage = "https://willembressers.github.io/pmyning"
documentation = "https://willembressers.github.io/pmyning"
repository = "https://github.com/willembressers/pmyning"
keywords = ["process","mining"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/willembressers/pmyning/issues"

[tool.poetry.dependencies]
python = "^3.11"
opyenxes = "^0.3.0"
pandas = "^2.2.1"
install = "^1.3.5"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocs-gen-files = "^0.5.0"
mkdocs-literate-nav = "^0.6.1"
mkdocstrings = {extras = ["python"], version = "^0.24.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
